# khawasu_core

./: CMakeLists.txt  logical_device.cpp  logical_device.h  logical_device_manager.cpp  logical_device_manager.h  platform.h  pool_memory_allocator.h  preserved_property.h  to_fix.h
protocols/: logical_proto.h  overlay_proto.h
